syntax = "proto3";

package example1;

option go_package = "xgo/tests/pb/pbexample";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

//import "tests/proto/module/external.proto";

import "proto/json.proto";

// EnumPlain1 used tests cases in this file.
enum Enum1 {
  Zero  = 0;
  One   = 2;
  Two   = 3;
  Three = 5;
  Four  = 6;
  Five  = 7;
  Six   = 9;
  Seven = 11;
  Eight = 12;
  Nine  = 15;
  Ten   = 17;
}

message Empty1 {

}

message Example1 {
  string   f_string1 = 1;

  oneof OnetType1 {
    string f_string2 = 2;
    string f_string3 = 3;
  }
  oneof OnetType2 {
    option (json.oneof) = { hide: true };

    string f_string4 = 4;
    string f_string5 = 5;
  }

  int32    f_int32    = 11;
  int64    f_int64    = 12;
  uint32   f_uint32   = 13;
  uint64   f_uint64   = 14;
  sint32   f_sint32   = 15;
  sint64   f_sint64   = 16;
  sfixed32 f_sfixed32 = 17;
  sfixed64 f_sfixed64 = 18;
  fixed32  f_fixed32  = 19;
  fixed64  f_fixed64  = 20;
  float    f_float    = 21;
  double   f_double   = 22;

  bool  f_bool1  = 31;
  bytes f_bytes1 = 32;

  Enum1 f_enum1 = 61 [ (json.field) = {
    omitempty: true, reference: { plain : { value: { enum: { codec: Number } } } }
  } ];
  Enum1 f_enum2 = 62 [ (json.field) = {
    omitempty: true, reference: { plain : { value: { enum: { codec: String } } } }
  } ];
  Enum1 f_enum3 = 63 [ (json.field) = {
    omitempty: false, reference: { plain : { value: { enum: { codec: Number } } } }
  } ];
  Enum1 f_enum4 = 64 [ (json.field) = {
    omitempty: false, reference: { plain : { value: { enum: { codec: String } } } }
  } ];

  optional Enum1 f_enum5 = 65 [ (json.field) = {
    omitempty: true, reference: { plain : { value: { enum: { codec: Number } } } }
  } ];
  optional Enum1 f_enum6 = 66 [ (json.field) = {
    omitempty: true, reference: { plain : { value: { enum: { codec: String } } } }
  } ];
  optional Enum1 f_enum7 = 67 [ (json.field) = {
    omitempty: false, reference: { plain : { value: { enum: { codec: Number } } } }
  } ];
  optional Enum1 f_enum8 = 68 [ (json.field) = {
    omitempty: false, reference: { plain : { value: { enum: { codec: String } } } }
  } ];

  google.protobuf.Duration f_duration1   = 41;
  google.protobuf.Timestamp f_timestamp1 = 42;

  Message1                            f_message11 = 51;
  Message1.Embed1                     f_message12 = 52;
  Message1.Embed1.Embed2              f_message13 = 53;

  google.protobuf.Any f_any1 = 54;

  repeated string r_string1 = 71;
  repeated int32 r_int32 = 72;
  repeated Message1 r_message = 73;
  repeated Enum1  r_enum = 74;

  map<string, string> m_string1 = 81;
  map<int32, string> m_string2 = 84;
//  map<bool, string> m_string3 = 86; // TODO: unsupported now.

  map<string, Message1> m_message1 = 82;
  map<string, Enum1> m_enum = 83;
}

message Message1 {
  message Embed1 {
    message Embed2 {
      string f_string1 = 1;
      string f_string2 = 2;
    }
    string f_string1 = 1;
    string f_string2 = 2;
  }
  string f_string1 = 1;
  string f_string2 = 2;
}
